Fix modal not displaying on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ html {
     height: 100%;
 }
 
+
+.fa {
+font-family: FontAwesome;
+}
+
 label,
 input,
 button,
